Support module-info.test in test mode "MODULAR_PATCHED_TEST_RUNTIME"
Closes #10